--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Penalized Portmanteau Statistics for Time Series Goodness of Fit
 Version: 0.1.0
 Author: Xiyan Tan, Colin Gallagher
-Maintainer: Xiyan Tan <xtan@g.clemson.edu>
+Maintainer: Xiyan Tan <xytanstat@gmail.com>
 Description: This package contains the Penalized Portmanteau Tests which are
               described in "Penalized M-Estimation of Autocorrelation
               for Time Series Goodness of Fit".
